# server/bill_segmentation/models/__init__.py
@@ -5,5 +5,5 @@ from __future__ import absolute_import
 # import models into model package
 from bill_segmentation.models.img_on_server_dto import ImgOnServerDto
 from bill_segmentation.models.roi_pts_dto import RoiPtsDto
-from bill_segmentation.models.roi_pts_dto_roi_pts import RoiPtsDtoRoiPts
+from bill_segmentation.models.roi_pts_dto_pts import RoiPtsDtoPts
 from bill_segmentation.models.version_dto import VersionDto
