# server/bill_segmentation/models/roi_pts_dto.py
@@ -6,10 +6,10 @@ from datetime import date, datetime  # noqa: F401
 from typing import List, Dict  # noqa: F401
 
 from bill_segmentation.models.base_model_ import Model
-from bill_segmentation.models.roi_pts_dto_roi_pts import RoiPtsDtoRoiPts
+from bill_segmentation.models.roi_pts_dto_pts import RoiPtsDtoPts
 from bill_segmentation import util
 
-from bill_segmentation.models.roi_pts_dto_roi_pts import RoiPtsDtoRoiPts  # noqa: E501
+from bill_segmentation.models.roi_pts_dto_pts import RoiPtsDtoPts  # noqa: E501
 
 class RoiPtsDto(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -17,21 +17,21 @@ class RoiPtsDto(Model):
     Do not edit the class manually.
     """
 
-    def __init__(self, roi_pts=None):  # noqa: E501
+    def __init__(self, pts=None):  # noqa: E501
         """RoiPtsDto - a model defined in OpenAPI
 
-        :param roi_pts: The roi_pts of this RoiPtsDto.  # noqa: E501
-        :type roi_pts: List[RoiPtsDtoRoiPts]
+        :param pts: The pts of this RoiPtsDto.  # noqa: E501
+        :type pts: List[RoiPtsDtoPts]
         """
         self.openapi_types = {
-            'roi_pts': List[RoiPtsDtoRoiPts]
+            'pts': List[RoiPtsDtoPts]
         }
 
         self.attribute_map = {
-            'roi_pts': 'roiPts'
+            'pts': 'pts'
         }
 
-        self._roi_pts = roi_pts
+        self._pts = pts
 
     @classmethod
     def from_dict(cls, dikt) -> 'RoiPtsDto':
@@ -45,22 +45,26 @@ class RoiPtsDto(Model):
         return util.deserialize_model(dikt, cls)
 
     @property
-    def roi_pts(self):
-        """Gets the roi_pts of this RoiPtsDto.
+    def pts(self):
+        """Gets the pts of this RoiPtsDto.
 
 
-        :return: The roi_pts of this RoiPtsDto.
-        :rtype: List[RoiPtsDtoRoiPts]
+        :return: The pts of this RoiPtsDto.
+        :rtype: List[RoiPtsDtoPts]
         """
-        return self._roi_pts
+        return self._pts
 
-    @roi_pts.setter
-    def roi_pts(self, roi_pts):
-        """Sets the roi_pts of this RoiPtsDto.
+    @pts.setter
+    def pts(self, pts):
+        """Sets the pts of this RoiPtsDto.
 
 
-        :param roi_pts: The roi_pts of this RoiPtsDto.
-        :type roi_pts: List[RoiPtsDtoRoiPts]
+        :param pts: The pts of this RoiPtsDto.
+        :type pts: List[RoiPtsDtoPts]
         """
+        if pts is not None and len(pts) > 4:
+            raise ValueError("Invalid value for `pts`, number of items must be less than or equal to `4`")  # noqa: E501
+        if pts is not None and len(pts) < 4:
+            raise ValueError("Invalid value for `pts`, number of items must be greater than or equal to `4`")  # noqa: E501
 
-        self._roi_pts = roi_pts
+        self._pts = pts
