# server/bill_segmentation/models/roi_pts_dto_pts.py
@@ -9,18 +9,18 @@ from bill_segmentation.models.base_model_ import Model
 from bill_segmentation import util
 
 
-class RoiPtsDtoRoiPts(Model):
+class RoiPtsDtoPts(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 
     Do not edit the class manually.
     """
 
     def __init__(self, x=None, y=None):  # noqa: E501
-        """RoiPtsDtoRoiPts - a model defined in OpenAPI
+        """RoiPtsDtoPts - a model defined in OpenAPI
 
-        :param x: The x of this RoiPtsDtoRoiPts.  # noqa: E501
+        :param x: The x of this RoiPtsDtoPts.  # noqa: E501
         :type x: int
-        :param y: The y of this RoiPtsDtoRoiPts.  # noqa: E501
+        :param y: The y of this RoiPtsDtoPts.  # noqa: E501
         :type y: int
         """
         self.openapi_types = {
@@ -37,32 +37,32 @@ class RoiPtsDtoRoiPts(Model):
         self._y = y
 
     @classmethod
-    def from_dict(cls, dikt) -> 'RoiPtsDtoRoiPts':
+    def from_dict(cls, dikt) -> 'RoiPtsDtoPts':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The roiPtsDto_roiPts of this RoiPtsDtoRoiPts.  # noqa: E501
-        :rtype: RoiPtsDtoRoiPts
+        :return: The roiPtsDto_pts of this RoiPtsDtoPts.  # noqa: E501
+        :rtype: RoiPtsDtoPts
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def x(self):
-        """Gets the x of this RoiPtsDtoRoiPts.
+        """Gets the x of this RoiPtsDtoPts.
 
 
-        :return: The x of this RoiPtsDtoRoiPts.
+        :return: The x of this RoiPtsDtoPts.
         :rtype: int
         """
         return self._x
 
     @x.setter
     def x(self, x):
-        """Sets the x of this RoiPtsDtoRoiPts.
+        """Sets the x of this RoiPtsDtoPts.
 
 
-        :param x: The x of this RoiPtsDtoRoiPts.
+        :param x: The x of this RoiPtsDtoPts.
         :type x: int
         """
 
@@ -70,20 +70,20 @@ class RoiPtsDtoRoiPts(Model):
 
     @property
     def y(self):
-        """Gets the y of this RoiPtsDtoRoiPts.
+        """Gets the y of this RoiPtsDtoPts.
 
 
-        :return: The y of this RoiPtsDtoRoiPts.
+        :return: The y of this RoiPtsDtoPts.
         :rtype: int
         """
         return self._y
 
     @y.setter
     def y(self, y):
-        """Sets the y of this RoiPtsDtoRoiPts.
+        """Sets the y of this RoiPtsDtoPts.
 
 
-        :param y: The y of this RoiPtsDtoRoiPts.
+        :param y: The y of this RoiPtsDtoPts.
         :type y: int
         """
 
